# plonky2-ed25519

./: Cargo.toml
src/: lib.rs
src/curve/: curve_adds.rs  curve_types.rs  ed25519.rs  eddsa.rs  mod.rs
src/field/: ed25519_base.rs  ed25519_scalar.rs  field_testing.rs  mod.rs  secp256k1_base.rs  secp256k1_scalar.rs
src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_windowed_mul.rs  eddsa.rs  mod.rs  nonnative.rs  split_nonnative.rs
src/sha512/: circuit.rs  mod.rs
